--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <h2>Updates</h2>
 <ul id="updates">
 <li>Week 1: Initial setup completed!</li>
+  <img src="embedded systems.jpeg" alt="Project Diagram" width="300">
 </ul>
 </body>
 </html
