--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Welcome to My Project Website</h1>
-<p>This website documents my project progress.</p>
+<p>This website documents my project progress of <b> CSCE 5612 Embedded Hardware/Software Design.</b></p>
 <h2>Updates</h2>
 <ul id="updates">
 <li>Week 1: Initial setup completed!</li>
