--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome to My Project Website</h1>
+<h1>Welcome to My Project Website of Embedded Hardware/Software Design</h1>
 <p>This website documents my project progress of <b> CSCE 5612 Embedded Hardware/Software Design.</b></p>
 <h2>Updates</h2>
 <ul id="updates">
 <li><b>Week 1:</b> Initial setup completed!</li>
   <img src="embedded systems.jpeg" alt="Project Diagram" width="300"><br></br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="300" height="300" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </ul>
 </body>
 </html
