--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
   <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <li><b>Week 1-2: Setting Up the Hardware Kit </b> </li>
+  <img src="Blink Code.jpeg" alt="Project Diagram" width="400">
+  <img src="Blink Image.jpeg" alt="Project Diagram" width="400">
 </ul>
 </body>
 </html
