--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Project</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Project</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome to My Project Website of Embedded Hardware/Software Design</h1>
-<p>This website documents my project progress of <b> CSCE 5612 Embedded Hardware/Software Design.</b></p>
-<ul id="updates">
-<li><b>Week 1:</b> Initial setup completed!</li>
-  <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
-  <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<li><b>Week 1-2: Setting Up the Hardware Kit </b> </li>
-  <img src="Blink Code.jpeg" alt="Project Diagram" width="400">
-  <img src="Blink Image.jpeg" alt="Project Diagram" width="200">
-</ul>
+  <h1>Welcome to My Project Website of Embedded Hardware/Software Design</h1>
+  <p>This website documents my project progress of <b>CSCE 5612 Embedded Hardware/Software Design.</b></p>
+  
+  <ul id="updates">
+    <li onclick="showContent('week1')"><b>Week 1:</b> Initial setup completed!</li>
+    <li onclick="showContent('week1-2')"><b>Week 1-2:</b> Setting Up the Hardware Kit</li>
+  </ul>
+  
+  <div id="content">
+    <div id="week1" class="content-section">
+      <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
+      <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" 
+              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+              encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
+    </div>
+
+    <div id="week1-2" class="content-section">
+      <img src="Blink Code.jpeg" alt="Blink Code" width="400">
+      <img src="Blink Image.jpeg" alt="Blink Image" width="200">
+    </div>
+  </div>
+  
+  <script src="script.js"></script>
 </body>
-</html
+</html>
