--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Project</title>
+  <title>Project Embedded Systems</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcome to My Project Website of Embedded Hardware/Software Design</h1>
-  <p>This website documents my project progress of <b>CSCE 5612 Embedded Hardware/Software Design.</b></p>
+  <p>Hello, this is Sindhu Yadulla. This website documents my project progress of <b>CSCE 5612 Embedded Hardware/Software Design.</b></p>
+  
   <div id="main-content">
-      <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
-      <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" 
-              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-              encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+    <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
+    <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
   </div>
   
   <ul id="updates">
