--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <p>Hello, this is Sindhu Yadulla. This website documents my project progress of <b>CSCE 5612 Embedded Hardware/Software Design.</b></p>
   
   <div id="main-content">
-    <img src="embedded systems.jpeg" alt="Project Diagram" width="400">
-    <iframe width="400" height="230" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" 
+    <img src="embedded systems.jpeg" alt="Project Diagram" width="200">
+    <iframe width="300" height="180" src="https://www.youtube.com/embed/oPn_adlC1Q0?si=q8DAtLEf07WIPwH2" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
             encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
@@ -24,7 +24,9 @@
   
   <div id="content">
     <div id="week1-2" class="content-section">
+      <p> LED Blink Code</p>
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
+      <p> LED Light Blink</p>
       <img src="Blink Image.jpeg" alt="Blink Image" width="200">
     </div>
   </div>
