--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="content">
     <div id="week1-2" class="content-section">
       <p>LED Blink Code</p><b>
-      <img src="Blink Code.jpeg" alt="Blink Code" width="400"><b>
+      <img src="Blink Code.jpeg" alt="Blink Code" width="400">
       <p>LED Light Blink</p><b>
       <img src="Blink Image.jpeg" alt="Blink Image" width="200">
     </div>
