--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   
   <div id="content">
     <div id="week1-2" class="content-section">
-      <p>LED Blink Code</p><b>
+      <p>LED Blink Code</p>
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
-      <p>LED Light Blink</p><b>
+      <p>LED Light Blink</p>
       <img src="Blink Image.jpeg" alt="Blink Image" width="200">
     </div>
   </div>
