--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
       <p>LED Light Blink</p>
       <img src="Blink Image.jpeg" alt="Blink Image" width="200">
+      <p>LED Blue Light Blink Code</p>
+      <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
+        <video controls width="600">
+        <source src="Blue Light Blink Video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
     </div>
   </div>
   
