--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div id="week1-2" class="content-section">
       <p>LED Blink Code</p>
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
-      <p>LED Light Blink</p>
-      <img src="Blink Image.jpeg" alt="Blink Image" width="200">
+      <p>LED Light Blink Image</p>
+      <img src="Light Blink Image.jpeg" alt="Blink Image" width="200">
       <p>LED Blue Light Blink Code</p>
       <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
       <p>LED Blue Light Blink Video</p>
