--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
       <p>LED Blue Light Blink Video</p>
         <video controls width="600">
-        <source src="Blue Light Blink Video.mp4" type="video/mp4">
+        <source src="Blue Light Blink Video" type="video/mp4">
         Your browser does not support the video tag.
          </video> 
     </div>
