--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
         Your browser does not support the video tag.
          </video> 
     </div>
+
+     <div id="week2" class="content-section">
+      <p>LED Blink Code</p>
+      <img src="Blink Code.jpeg" alt="Blink Code" width="400">
+      <p>LED Light Blink Image</p>
+      <img src="Light Blink Image.jpeg" alt="Blink Image" width="200">
+      <p>LED Blue Light Blink Code</p>
+      <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
+      <p>LED Blue Light Blink Video</p>
+        <video controls width="400">
+        <source src="Blue Light Blink video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+    </div>
   </div>
   
   <script src="script.js"></script>
