--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
          </video> 
     </div>
 
+    <ul id="updates">
+    <li onclick="showContent('week2')"><b>Week 2:</b> Setting Up the Hardware Kit Part-2 </li>
+  </ul>
+
      <div id="week2" class="content-section">
       <p>LED Blink Code</p>
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
