--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
        
        <p>5.Happy Birthday! Burzzer sound</p>
-       p>Burzzer Code file & Device programmed:</p>
+       <p>Burzzer Code file & Device programmed:</p>
        <img src="Code file and device programmed.png" alt="Blink Image" width="200">
        <p>Output video of Burzzer sound</p>
         <video controls width="600">
@@ -99,12 +99,12 @@
        
 
        <p>6.Bluetooth Low Energy</p>
-        p>Code file & Device programmed:</p>
+        <p>Code file & Device programmed:</p>
        <img src="Device prgrammed - Copy.png" alt="Blink Image" width="200">
        <p>Connecting mobile Bluetooth with nRF connect</p>
-       <img src="Connected to Deepak and click send" alt="Blink Image" width="200">
+       <img src="Connecting Bluetooth with nRF connect.jpg" alt="Blink Image" width="200">
        <p>Connected to Deepak and click send</p>
-       <img src="Code file and device programmed.png" alt="Blink Image" width="200">
+       <img src="Connected to Deepak and click send.jpg" alt="Blink Image" width="200">
        <p>Sending 0000 to nRF Development board to turn on LED</p>
        <img src="Sending 0000 to nRF Development board to turn on LED" alt="Blink Image" width="200">
        <p>Output video of LED turned ON</p>
