--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <p>Code file & Device programmed:</p>
         <img src="Built-in IMUand Microphone - Device programmed.png" alt="Image" width="200">
         <p>Output of Serial monitor and scatter plot</p>
-        <img src=Built-in IMUand Microphone - Code with serial monitor values.png" alt="Image" width="200">
+        <img src="Built-in IMUand Microphone - Code with serial monitor values.png" alt="Image" width="200">
         <img src="Built-in IMUand Microphone - Serial plotter.png" alt="Image" width="200">
        <p>Output of Serial monitor</p>
         <img src="Built-in IMUand Microphone - Code with serial monitor values marked.png" alt="Blink Image" width="200">
@@ -56,13 +56,13 @@
        
        <p>2: OLED Display</p>
        <p>Code file & Device programmed:</p>
-        <img src="Light Blink Image.jpeg" alt="Blink Image" width="200">
+        <img src="Device programmed.png" alt="Blink Image" width="200">
        <p>Sample OLED display</p>
          <img src="SAMPLE OLED dispaly.jpg" alt="Blink Image" width="200">
        <p>Displayed Name on OLED display</p>
        <img src="OLED name display.jpeg" alt="Blink Image" width="200">
        <p>Video of Displaying name on OLED display</p>
-        <video controls width="600">
+        <video controls width="400">
         <source src="OLED video name display.mp4" type="video/mp4">
         Your browser does not support the video tag.
          </video> 
