--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        <p>Datalogger output in serial monitor</p>
          <img src="serial monitor output.png" alt="Blink Image" width="200">
        <p>Data logger.txt</p>
-       <a href= "DATALOG.TXT"  target="blank">Data Log text file</a>
+       <a href= "DATALOG.TXT" target="_blank">Data Log text file</a>
 
        
        <p>4.RTC (Real-time clock)</p>
