--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </ul>
 
      <div id="week2" class="content-section">
-      <p>1: Built-in IMU and Microphone</p>
+      <p id="pdisplay">1: Built-in IMU and Microphone</p>
        <p>Code file & Device programmed:</p>
         <img src="Built-in IMUand Microphone - Device programmed.png" alt="Image" width="200">
         <p>Output of Serial monitor and scatter plot</p>
