--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
       <p>LED Light Blink Image</p>
       <img src="Light Blink Image.jpeg" alt="Blink Image" width="400">
+       <p>LED Light Blink Video</p>
+        <video controls width="500">
+        <source src="LED Light blink video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
       <p>LED Blue Light Blink Code</p>
       <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
       <p>LED Blue Light Blink Video</p>
