--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
         <img src="Built-in IMUand Microphone - Code with serial monitor values marked.png" alt="Blink Image" width="400">
        <p>PDM Serial plotter</p>
         <img src="PDM output.png" alt="Blink Image" width="400">
+       <p>Video of PDM Serial plotter</p>
+        <video controls width="500">
+        <source src="PDM_serial_monitor.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p>Video of Serial plotter</p>
+        <video controls width="500">
+        <source src="Serial_monitor.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+
 
        
        <h3 id="pdisplay">2: OLED Display</h3>
