--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
   
   <div id="content">
     <div id="week1-2" class="content-section">
-      <p>LED Blink Code</p>
+      <p><b>LED Blink Code</b></p>
       <img src="Blink Code.jpeg" alt="Blink Code" width="400">
-      <p>LED Light Blink Image</p>
+      <p><b>LED Light Blink Image</b></p>
       <img src="Light Blink Image.jpeg" alt="Blink Image" width="400">
-       <p>LED Light Blink Video</p>
+       <p><b>LED Light Blink Video</b></p>
         <video controls width="500">
         <source src="LED Light blink video.mp4" type="video/mp4">
         Your browser does not support the video tag.
          </video> 
-      <p>LED Blue Light Blink Code</p>
+      <p><b>LED Blue Light Blink Code</b></p>
       <img src="Blue Light Code.jpeg" alt="Blink Code" width="400">
-      <p>LED Blue Light Blink Video</p>
+      <p><b>LED Blue Light Blink Video</b></p>
         <video controls width="500">
         <source src="Blue Light Blink video.mp4" type="video/mp4">
         Your browser does not support the video tag.
