--- a/index.html
+++ b/index.html
@@ -148,6 +148,27 @@
        <p><b>Bluetooth logs on serial monitor</b></p>
        <img src="Logs on Serial monitor.png" alt="Blink Image" width="400">   
     </div>
+
+ <ul id="updates">
+    <li onclick="showContent('week2')"><b>Week 3:Smart Environmental and Activity Logger</b> </li>
+  </ul>
+    <div id="week3" class="content-section">
+      <h3 id="pdisplay"><b>1.Voltage Divider Implementation</b></h3>
+      p><b>Basic Step up</b></p>
+        <video controls width="500">
+        <source src="Basic_Setup_.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p><b>Circuit connection</b></p>
+         <img src="circuit_connection.jpg" alt="Blink Image" width="400">
+       <p><b>Code dumped and checking voltage of battery</b></p>
+       <video controls width="500">
+        <source src="full_implementation_video_.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p><b>Code files and serial monitor output</b></p>
+         <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+ </div>
   </div>
   
   <script src="script.js"></script>
