--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </ul>
     <div id="week3" class="content-section">
       <h3 id="pdisplay"><b>1.Voltage Divider Implementation</b></h3>
-      p><b>Basic Step up</b></p>
+      <p><b>Basic Step up</b></p>
         <video controls width="500">
         <source src="Basic_Setup_.mp4" type="video/mp4">
         Your browser does not support the video tag.
