--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     </iframe>
   </div>
   
-  <ul id="updates">
-    <li onclick="showContent('week1-2')"><b>Week 1-2: Setting Up the Hardware Kit</b></li>
-  </ul>
+    <h3 onclick="showContent('week1-2')"><b>Week 1-2: Setting Up the Hardware Kit</b></h3>
+
   
     <div id="week1-2" class="content-section">
       <p><b>LED Blink Code</b></p>
