--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </iframe>
   </div>
   
-    <li onclick="showContent('week1-2')"><b>Week 1-2: Setting Up the Hardware Kit</b></li>
+    <h3 onclick="showContent('week1-2')"><b>Week 1-2: Setting Up the Hardware Kit</b></h3>
 
   
     <div id="week1-2" class="content-section">
