--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
   </div>
+  <marquee direction="left" behavior="scroll" scrollamount="5" loop="infinite" bgcolor="lightblue">
+  Click on week,to display content!
+</marquee>
   
     <li onclick="showContent('week1-2')"><b>Week 1-2: Setting Up the Hardware Kit</b></li>
 
