--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
          </video> 
        <p><b>Code files and serial monitor output</b></p>
          <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+
+      <h3>Part-2</h3>
+     <p><b>Full Demo Video</b></p>
+       <video controls width="500">
+        <source src="OLDC display full demo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <a href= "DATALOG lab3.TXT" target="_blank">Data Log text file</a>
+       <a href= "lab3ino" target="_blank">Code file</a>
+    
  </div>
   </div>
   
