--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <h3>Part-2</h3>
      <p><b>Full Demo Video</b></p>
        <video controls width="500">
-        <source src="OLDC display full demo.mp4" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/view?usp=sharing" type="video/mp4">
         Your browser does not support the video tag.
          </video> 
        <a href= "DATALOG lab3.TXT" target="_blank">Data Log text file</a>
