--- a/index.html
+++ b/index.html
@@ -172,10 +172,7 @@
 
       <h3>Part-2</h3>
      <p><b>Full Demo Video</b></p>
-       <video controls width="500">
-        <source src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/view?usp=drive_link" type="video/mp4">
-        Your browser does not support the video tag.
-         </video> 
+       <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
        <a href= "DATALOG lab3.TXT" target="_blank">Data Log text file</a>
        <a href= "lab3ino" target="_blank">Code file</a>
     
