--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
       <h3>Part-2</h3>
      <p><b>Full Demo Video</b></p>
        <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
-       <a href= "DATALOG lab3.TXT" target="_blank">Data Log text file</a>
-       <a href= "lab3ino" target="_blank">Code file</a>
+       <a href= "DATALOG lab3.CSV" target="_blank">Data Log text file</a>
+       <a href= "lab3.ino" target="_blank">Code file</a>
     
  </div>
   </div>
