--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
      <p><b>Full Demo Video</b></p>
        <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
        <a href= "DATALOG lab3.CSV" target="_blank">Data Log text file</a>
-       <a href= "lab3.ino" target="_blank">Code file</a>
+       <a href= "LAB3.ino" target="_blank">Code file</a>
     
  </div>
   </div>
