--- a/index.html
+++ b/index.html
@@ -177,6 +177,25 @@
        <a href= "LAB3.ino" target="_blank">Code file</a>
     
  </div>
+  <li onclick="showContent('week4')"><b>Week 4:Activity Recognition with ML and IMU</b> </li>
+<div id="week4" class="content-section">
+  <h3>Part-1 : Gesture Recognition</h3>
+      <h3 id="pdisplay"><b>1.Voltage Divider Implementation</b></h3>
+      <p><b>Basic Step up</b></p>
+        <video controls width="500">
+        <source src="Basic_Setup_.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p><b>Circuit connection</b></p>
+         <img src="circuit_connection.jpg" alt="Blink Image" width="400">
+       <p><b>Code dumped and checking voltage of battery</b></p>
+       <video controls width="500">
+        <source src="full_implementation_video_.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p><b>Code files and serial monitor output</b></p>
+         <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  
   </div>
   
   <script src="script.js"></script>
