--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
  </div>
   <li onclick="showContent('week4')"><b>Week 4:Activity Recognition with ML and IMU</b> </li>
 <div id="week4" class="content-section">
-  <h3>Part-1 : Gesture Recognition</h3>
-      <h3 id="pdisplay"><b>1.Voltage Divider Implementation</b></h3>
+
+      <h3 id="pdisplay"><b>1.Gesture Recognition</b></h3>
       <p><b>Basic Step up</b></p>
         <video controls width="500">
         <source src="Basic_Setup_.mp4" type="video/mp4">
