--- a/index.html
+++ b/index.html
@@ -179,23 +179,37 @@
  </div>
   <li onclick="showContent('week4')"><b>Week 4:Activity Recognition with ML and IMU</b> </li>
 <div id="week4" class="content-section">
+  <p><b>Work flow diagram </b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
 
       <h3 id="pdisplay"><b>1.Gesture Recognition</b></h3>
-      <p><b>Basic Step up</b></p>
-        <video controls width="500">
-        <source src="Basic_Setup_.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video> 
-       <p><b>Circuit connection</b></p>
-         <img src="circuit_connection.jpg" alt="Blink Image" width="400">
-       <p><b>Code dumped and checking voltage of battery</b></p>
-       <video controls width="500">
-        <source src="full_implementation_video_.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video> 
-       <p><b>Code files and serial monitor output</b></p>
-         <img src="Voltage_divider_.png" alt="Blink Image" width="400">
-  
+       <p><b> Training IMU Data- video</b></p>
+         <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
+
+         <p><b> Punch.csv file</b></p>
+       <a href= "Punch.CSV" target="_blank">Data Log text file</a>
+  <p><b> Flex.csv file</b></p>
+       <a href= "Flex.csv" target="_blank">Code file</a>
+  <p><b> Acceleration Graph</b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <p><b> Acceleration Graph</b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <p><b> Acceleration Graph</b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <p><b> Acceleration Graph</b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <p><b> Acceleration Graph</b></p>
+  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <p><b> model.h file</b></p>
+       <a href= "Flex.csv" target="_blank">Code file</a>
+  <p><b> gesture_model.tflit file</b></p>
+       <a href= "Flex.csv" target="_blank">Code file</a>
+   <p><b> gesture_model.tflit file</b></p>
+       <a href= "Flex.csv" target="_blank">Code file</a>    
+  <p><b> gesture_model.tflit file</b></p>
+       <a href= "Flex.csv" target="_blank">Code file</a>
+  <p><b>Full Demo Video</b></p>
+       <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
   </div>
   
   <script src="script.js"></script>
