--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <li onclick="showContent('week4')"><b>Week 4:Activity Recognition with ML and IMU</b> </li>
 <div id="week4" class="content-section">
   <p><b>Work flow diagram </b></p>
-  <img src="Voltage_divider_.png" alt="Blink Image" width="400">
+  <img src="workflow.jpg" alt="Blink Image" width="400">
 
       <h3 id="pdisplay"><b>1.Gesture Recognition</b></h3>
        <p><b> Training IMU Data- video</b></p>
@@ -189,11 +189,11 @@
         Your browser does not support the video tag.
          </video> 
          <p><b> Punch.csv file</b></p>
-       <a href= "Punch.csv" target="_blank">Data Log text file</a>
+       <a href= "Punch.csv" target="_blank">Punch csv file</a>
   <p><b> Flex.csv file</b></p>
-       <a href= "Flex.csv" target="_blank">Code file</a>
+       <a href= "Flex.csv" target="_blank">Flex csv file</a>
   <p><b> Acceleration Graph</b></p>
-  <img src="Accelearion.png" alt="Image" width="400">
+  <img src="Accelearion_graph.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-1</b></p>
   <img src="Training_and_validation_loss_graph-1.png" alt="Image" width="400">
   <p><b>Training and Validation Graph-2</b></p>
@@ -201,17 +201,17 @@
   <p><b> Training and Validation Graph-3</b></p>
   <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
   <p><b> IPYNB File</b></p>
-       <a href= "Lab 4 - IMU Processing.ipynb - Colab" target="_blank">Code file</a>
+       <a href= "Lab_4_IMU_Processing" target="_blank">Code file</a>
   <p><b> model.h file</b></p>
-       <a href= "model.h" target="_blank">Code file</a>
+       <a href= "model.h" target="_blank">model.h file</a>
   <p><b> gesture_model.tflit file</b></p>
-       <a href= "gesture_model.tflit" target="_blank">Code file</a>
-   <p><b> gesture file</b></p>
-       <a href= "Gesture.ino" target="_blank">Code file</a>    
-  <p><b> IMU classifier file</b></p>
-       <a href= "IMU-classifier.ino" target="_blank">Code file</a>
+       <a href= "gesture_model.tflit" target="_blank">gesture_model tflit file</a>
+   <p><b> Training code gesture file</b></p>
+       <a href= "Gesture.ino" target="_blank">gesture file</a>    
+  <p><b> Trained codeIMU classifier file</b></p>
+       <a href= "IMU_Classifier.ino" target="_blank">Code file</a>
   <p><b>Full Demo Video</b></p>
-       <iframe src="https://drive.google.com/file/d/1Im4Y94S9T1s7Rr-dkJdgoPcbwmo4IKxj/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1OyYOAL5OrB6YhnPoU6bXDaHnfTrpaYa6/preview" width="640" height="480" allow="autoplay"></iframe>
   </div>
   
   <script src="script.js"></script>
