--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <p><b> Training and Validation Graph-3</b></p>
   <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
   <p><b> IPYNB File</b></p>
-       <a href= "Lab_4_IMU_Processing" target="_blank">Code file</a>
+       <a href= "Lab_4_IMU_Processing" target="_blank"> IPYNB Code file</a>
   <p><b> model.h file</b></p>
        <a href= "model.h" target="_blank">model.h file</a>
   <p><b> gesture_model.tflit file</b></p>
@@ -209,7 +209,7 @@
    <p><b> Training code gesture file</b></p>
        <a href= "Gesture.ino" target="_blank">gesture file</a>    
   <p><b> Trained codeIMU classifier file</b></p>
-       <a href= "IMU_Classifier.ino" target="_blank">Code file</a>
+       <a href= "IMU_Classifier.ino" target="_blank">IMU Classifier file</a>
   <p><b>Full Demo Video</b></p>
 <iframe src="https://drive.google.com/file/d/1OyYOAL5OrB6YhnPoU6bXDaHnfTrpaYa6/preview" width="640" height="480" allow="autoplay"></iframe>
   </div>
