--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <li onclick="showContent('week4')"><b>Week 4:Activity Recognition with ML and IMU</b> </li>
 <div id="week4" class="content-section">
   <p><b>Work flow diagram </b></p>
-  <img src="workflow.jpg" alt="Blink Image" width="400">
+  <img src="workflow.jpeg" alt="Blink Image" width="400">
 
       <h3 id="pdisplay"><b>1.Gesture Recognition</b></h3>
        <p><b> Training IMU Data- video</b></p>
