--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
        <a href= "Lab_4_IMU_Processing" target="_blank"> IPYNB Code file</a>
   <p><b> model.h file</b></p>
        <a href= "model.h" target="_blank">model.h file</a>
-  <p><b> gesture_model.tflit file</b></p>
-       <a href= "gesture_model.tflit" target="_blank">gesture_model tflit file</a>
+  <p><b> gesture_model.tflite file</b></p>
+       <a href= "gesture_model.tflite" target="_blank">gesture_model tflite file</a>
    <p><b> Training code gesture file</b></p>
        <a href= "Gesture.ino" target="_blank">gesture file</a>    
   <p><b> Trained codeIMU classifier file</b></p>
