--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
   <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
    <p><b> Training and Validation Graph-3</b></p>
   <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
+</div>
   <script src="script.js"></script>
 </body>
 </html>
