--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
 <iframe src="https://drive.google.com/file/d/1OyYOAL5OrB6YhnPoU6bXDaHnfTrpaYa6/preview" width="640" height="480" allow="autoplay"></iframe>
   </div>
 
-<li onclick="showContent('week4')"><b>Week 5: Intro to PCB Design</b> </li>
+<li onclick="showContent('week5')"><b>Week 5: Intro to PCB Design</b> </li>
 <div id="week5" class="content-section">
   <h3 id="pdisplay"><b>Designing a Simple LED Circuit</b></h3>
-  <p><b> Training and Validation Graph-3</b></p>
-  <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
-  <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
-   <p><b> Training and Validation Graph-3</b></p>
-  <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
+  <p><b> 3D PCB View</b></p>
+  <img src="3D side view.png" alt="Image" width="400">
+  <img src="3D view PCB.png" alt="Image" width="400">
+   <p><b> DRC Report</b></p>
+  <img src="DRC Report.png" alt="Image" width="400">
 </div>
   <script src="script.js"></script>
 </body>
