--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 
 <li onclick="showContent('week5')"><b>Week 5: Intro to PCB Design</b> </li>
 <div id="week5" class="content-section">
+   <p><b>Schematic file</b></p>
+       <a href= "LiPo_LED_Circuit.kicad_sch" target="_blank">schematic file</a>   
+   <p><b>PCB Layout file</b></p>
+       <a href= "LiPo_LED_Circuit.kicad_pcb" target="_blank">pcb layout file</a>   
   <h3 id="pdisplay"><b>Designing a Simple LED Circuit</b></h3>
   <p><b> 3D PCB View</b></p>
   <img src="3D side view.png" alt="Image" width="400">
