--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
    <p><b> DRC Report</b></p>
   <img src="DRC Report.png" alt="Image" width="400">
    <p><b>Gerber Files(.zip)</b></p>
-       <a href= "" target="_blank">Gerber Files(.zip)</a>   
+       <a href= "Gerber File.zip" target="_blank">Gerber Files(.zip)</a>   
 </div>
   <script src="script.js"></script>
 </body>
