--- a/index.html
+++ b/index.html
@@ -230,6 +230,22 @@
    <p><b>Gerber Files(.zip)</b></p>
        <a href= "Gerber File.zip" target="_blank">Gerber Files(.zip)</a>   
 </div>
+  <li onclick="showContent('week6')"><b>Week 6:Activity Tracking Model and PCB </b> </li>
+<div id="week6" class="content-section">
+  <h3 id="pdisplay"><b>Designing a Simple LED Circuit</b></h3>
+   <p><b>Schematic file</b></p>
+       <a href= "LiPo_LED_Circuit.kicad_sch" target="_blank">schematic file</a>   
+   <p><b>PCB Layout file</b></p>
+       <a href= "LiPo_LED_Circuit.kicad_pcb" target="_blank">pcb layout file</a>   
+  <p><b> DRC Report</b></p>
+  <img src="DRC Report.png" alt="Image" width="400">
+  <p><b> 3D PCB View (3D Render)</b></p>
+  <img src="3D side view.png" alt="Image" width="400">
+  <img src="3D view PCB.png" alt="Image" width="400">
+   
+   <p><b>Gerber Files(.zip)</b></p>
+       <a href= "Gerber File.zip" target="_blank">Gerber Files(.zip)</a>   
+</div>
   <script src="script.js"></script>
 </body>
 </html>
