--- a/index.html
+++ b/index.html
@@ -232,19 +232,48 @@
 </div>
   <li onclick="showContent('week6')"><b>Week 6:Activity Tracking Model and PCB </b> </li>
 <div id="week6" class="content-section">
-  <h3 id="pdisplay"><b>Designing a Simple LED Circuit</b></h3>
-   <p><b>Schematic file</b></p>
-       <a href= "LiPo_LED_Circuit.kicad_sch" target="_blank">schematic file</a>   
-   <p><b>PCB Layout file</b></p>
-       <a href= "LiPo_LED_Circuit.kicad_pcb" target="_blank">pcb layout file</a>   
-  <p><b> DRC Report</b></p>
-  <img src="DRC Report.png" alt="Image" width="400">
-  <p><b> 3D PCB View (3D Render)</b></p>
-  <img src="3D side view.png" alt="Image" width="400">
-  <img src="3D view PCB.png" alt="Image" width="400">
-   
-   <p><b>Gerber Files(.zip)</b></p>
-       <a href= "Gerber File.zip" target="_blank">Gerber Files(.zip)</a>   
+  <h3 id="pdisplay"><b>1.Activity Recognition</b></h3>
+       <p><b> Training IMU Data- videos</b></p>
+         <video controls width="500">
+        <source src="Demo Execution.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+         <source src="Sitting Training.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video>
+         <source src="Standing Training.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video>
+         <source src="Ascending Stairs Training.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video>
+          <source src="Descending Stairs Training.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video>
+         <p><b> Punch.csv file</b></p>
+       <a href= "Punch.csv" target="_blank">Punch csv file</a>
+  <p><b> Flex.csv file</b></p>
+       <a href= "Flex.csv" target="_blank">Flex csv file</a>
+  <p><b> Acceleration Graph</b></p>
+  <img src="Accelearion_graph.png" alt="Image" width="400">
+  <p><b> Training and Validation Graph-1</b></p>
+  <img src="Training_and_validation_loss_graph-1.png" alt="Image" width="400">
+  <p><b>Training and Validation Graph-2</b></p>
+  <img src="Training_and_validation_loss_2.png" alt="Image" width="400">
+  <p><b> Training and Validation Graph-3</b></p>
+  <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
+  <p><b> IPYNB File</b></p>
+       <a href= "Lab_4_IMU_Processing" target="_blank"> IPYNB Code file</a>
+  <p><b> model.h file</b></p>
+       <a href= "model.h" target="_blank">model.h file</a>
+  <p><b> gesture_model.tflite file</b></p>
+       <a href= "gesture_model.tflite" target="_blank">gesture_model tflite file</a>
+   <p><b> Training code gesture file</b></p>
+       <a href= "Gesture.ino" target="_blank">gesture file</a>    
+  <p><b> Trained codeIMU classifier file</b></p>
+       <a href= "IMU_Classifier.ino" target="_blank">IMU Classifier file</a>
+  <p><b>Full Demo Video</b></p>
+<iframe src="https://drive.google.com/file/d/1OyYOAL5OrB6YhnPoU6bXDaHnfTrpaYa6/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
   <script src="script.js"></script>
 </body>
