--- a/index.html
+++ b/index.html
@@ -233,27 +233,23 @@
   <li onclick="showContent('week6')"><b>Week 6:Activity Tracking Model and PCB </b> </li>
 <div id="week6" class="content-section">
   <h3 id="pdisplay"><b>1.Activity Recognition</b></h3>
-       <p><b> Training IMU Data- videos</b></p>
-         <video controls width="500">
-        <source src="Demo Execution.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video> 
-         <source src="Sitting Training.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video>
-         <source src="Standing Training.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video>
-         <source src="Ascending Stairs Training.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video>
-          <source src="Descending Stairs Training.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-         </video>
-         <p><b> Punch.csv file</b></p>
-       <a href= "Punch.csv" target="_blank">Punch csv file</a>
-  <p><b> Flex.csv file</b></p>
-       <a href= "Flex.csv" target="_blank">Flex csv file</a>
+  <p><b> Training IMU Data- videos</b></p>
+  <iframe src="https://drive.google.com/file/d/19fbD_a5nBIuUelFiEaaoV0HbGvz23GUt/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/19fbD_a5nBIuUelFiEaaoV0HbGvz23GUt/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1ArLmUxZSjl2AZC_ru1gzAeNZ0kFvigSk/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1T2gwkoMDYgLAkvxYEZ7yHm5TRq-5W5XZ/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1IkwCvPq0vKfqoy9I9jwG2LMWI8eA9Zb-/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1X-6nPVrGbG3RHk2fsOLU2qEF0wFpOvd6/preview" width="640" height="480" allow="autoplay"></iframe>
+         <p><b> Sitting.csv file</b></p>
+       <a href= "Sitting.csv" target="_blank">Sitting csv file</a>
+  <p><b> Standing.csv file</b></p>
+       <a href= "Standing.csv" target="_blank">Standing csv file</a>
+  <p><b> Walking.csv file</b></p>
+       <a href= "Walking.csv" target="_blank">Walking csv file</a>
+  <p><b> Ascending.csv file</b></p>
+       <a href= "Ascending.csv" target="_blank">Ascending csv file</a>
+  <p><b> Descending.csv file</b></p>
+       <a href= "Descending.csv" target="_blank">Descending csv file</a>
   <p><b> Acceleration Graph</b></p>
   <img src="Accelearion_graph.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-1</b></p>
@@ -263,17 +259,19 @@
   <p><b> Training and Validation Graph-3</b></p>
   <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
   <p><b> IPYNB File</b></p>
-       <a href= "Lab_4_IMU_Processing" target="_blank"> IPYNB Code file</a>
+       <a href= "lab4_2" target="_blank"> IPYNB Code file</a>
   <p><b> model.h file</b></p>
-       <a href= "model.h" target="_blank">model.h file</a>
+       <a href= "model 4_2" target="_blank">model.h file</a>
   <p><b> gesture_model.tflite file</b></p>
-       <a href= "gesture_model.tflite" target="_blank">gesture_model tflite file</a>
+       <a href= "gesture_model 4-2.tflite" target="_blank">gesture_model tflite file</a>
    <p><b> Training code gesture file</b></p>
        <a href= "Gesture.ino" target="_blank">gesture file</a>    
   <p><b> Trained codeIMU classifier file</b></p>
        <a href= "IMU_Classifier.ino" target="_blank">IMU Classifier file</a>
-  <p><b>Full Demo Video</b></p>
-<iframe src="https://drive.google.com/file/d/1OyYOAL5OrB6YhnPoU6bXDaHnfTrpaYa6/preview" width="640" height="480" allow="autoplay"></iframe>
+  <p><b>Full Demo Videos</b></p>
+<iframe src="https://drive.google.com/file/d/19iPsjAe7gvUwnY0nLCn9qhUUSy95ZJg0/preview" width="640" height="480" allow="autoplay"></iframe>
+ <iframe src="https://drive.google.com/file/d/1i-f6fTDjEEOFreswqP3cE6O1AbOdpN64/preview" width="640" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/1UXBTlobRjQp9qZQ4u3FOn4rpnGuBOaLt/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
   <script src="script.js"></script>
 </body>
