--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
   <h3 id="pdisplay"><b>1.Activity Recognition</b></h3>
   <p><b> Training IMU Data- videos</b></p>
   <iframe src="https://drive.google.com/file/d/19fbD_a5nBIuUelFiEaaoV0HbGvz23GUt/preview" width="640" height="480" allow="autoplay"></iframe>
-  <iframe src="https://drive.google.com/file/d/19fbD_a5nBIuUelFiEaaoV0HbGvz23GUt/preview" width="640" height="480" allow="autoplay"></iframe>
-  <iframe src="https://drive.google.com/file/d/1ArLmUxZSjl2AZC_ru1gzAeNZ0kFvigSk/preview" width="640" height="480" allow="autoplay"></iframe>
+ <iframe src="https://drive.google.com/file/d/1MRxkXbpfv5SQGbAP4ILUrFYd-ovnQqoU/preview" width="640" height="480" allow="autoplay"></iframe> <iframe src="https://drive.google.com/file/d/1ArLmUxZSjl2AZC_ru1gzAeNZ0kFvigSk/preview" width="640" height="480" allow="autoplay"></iframe>
   <iframe src="https://drive.google.com/file/d/1T2gwkoMDYgLAkvxYEZ7yHm5TRq-5W5XZ/preview" width="640" height="480" allow="autoplay"></iframe>
   <iframe src="https://drive.google.com/file/d/1IkwCvPq0vKfqoy9I9jwG2LMWI8eA9Zb-/preview" width="640" height="480" allow="autoplay"></iframe>
   <iframe src="https://drive.google.com/file/d/1X-6nPVrGbG3RHk2fsOLU2qEF0wFpOvd6/preview" width="640" height="480" allow="autoplay"></iframe>
