--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
   <p><b> Acceleration Graph</b></p>
   <img src="Accelearion_graph.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-1</b></p>
-  <img src="Training_and_validation_loss_graph-1.png" alt="Image" width="400">
+  <img src="training and validation graph1.png" alt="Image" width="400">
   <p><b>Training and Validation Graph-2</b></p>
-  <img src="Training_and_validation_loss_2.png" alt="Image" width="400">
+  <img src="training and validation graph2.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-3</b></p>
-  <img src="Training_and_validation_loss_3.png" alt="Blink Image" width="400">
+  <img src="training and validation graph3.png" alt="Blink Image" width="400">
   <p><b> IPYNB File</b></p>
        <a href= "lab4_2" target="_blank"> IPYNB Code file</a>
   <p><b> model.h file</b></p>
