--- a/index.html
+++ b/index.html
@@ -249,8 +249,9 @@
        <a href= "Ascending.csv" target="_blank">Ascending csv file</a>
   <p><b> Descending.csv file</b></p>
        <a href= "Descending.csv" target="_blank">Descending csv file</a>
-  <p><b> Acceleration Graph</b></p>
-  <img src="Accelearion_graph.png" alt="Image" width="400">
+  <p><b> Acceleration Graph and Gyroscope Ascending Graph </b></p>
+  <img src="accelerator ascending.png" alt="Image" width="400">
+  <img src="Ascending Gyroscope.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-1</b></p>
   <img src="training and validation graph1.png" alt="Image" width="400">
   <p><b>Training and Validation Graph-2</b></p>
