--- a/index.html
+++ b/index.html
@@ -265,10 +265,11 @@
   <p><b> gesture_model.tflite file</b></p>
        <a href= "gesture_model 4-2.tflite" target="_blank">gesture_model tflite file</a>
    <p><b> Training code gesture file</b></p>
-       <a href= "Gesture.ino" target="_blank">gesture file</a>    
+       <a href= "gesture4_2.ino" target="_blank">gesture file</a>    
   <p><b> Trained codeIMU classifier file</b></p>
-       <a href= "IMU_Classifier.ino" target="_blank">IMU Classifier file</a>
+       <a href= "IMU_Classifier4_2.ino" target="_blank">IMU Classifier file</a>
   <p><b>Full Demo Videos</b></p>
+  <iframe src="https://drive.google.com/file/d/1e1KfyeEtKFr6otRufOm7_QyG7hQHa1hC/preview" width="640" height="480" allow="autoplay"></iframe>
 <iframe src="https://drive.google.com/file/d/19iPsjAe7gvUwnY0nLCn9qhUUSy95ZJg0/preview" width="640" height="480" allow="autoplay"></iframe>
  <iframe src="https://drive.google.com/file/d/1i-f6fTDjEEOFreswqP3cE6O1AbOdpN64/preview" width="640" height="480" allow="autoplay"></iframe>
   <iframe src="https://drive.google.com/file/d/1UXBTlobRjQp9qZQ4u3FOn4rpnGuBOaLt/preview" width="640" height="480" allow="autoplay"></iframe>
