--- a/index.html
+++ b/index.html
@@ -250,9 +250,21 @@
   <p><b> Descending.csv file</b></p>
        <a href= "Descending.csv" target="_blank">Descending csv file</a>
   <p><b> Acceleration Graph and Gyroscope </b></p>
-   <p><b> Ascending Graph</b></p>
+   <p><b> Ascending Stairs Graph</b></p>
   <img src="accelerator ascending.png" alt="Image" width="400">
   <img src="Ascending Gyroscope.png" alt="Image" width="400">
+  <p><b> Descending Stairs Graph</b></p>
+  <img src="Descending stairs accelerator.png" alt="Image" width="400">
+  <img src="Descending stairs gyroscope.png" alt="Image" width="400">
+  <p><b> Sitting </b></p>
+  <img src="Sitting acceleration.png" alt="Image" width="400">
+  <img src="Sitting gyroscope.png" alt="Image" width="400">
+  <p><b> Standing </b></p>
+  <img src="Standing acceleration.png" alt="Image" width="400">
+  <img src="Standing gyroscope.png" alt="Image" width="400">
+  <p><b> Walking </b></p>
+  <img src="Walking acceleration.png" alt="Image" width="400">
+  <img src="Walking gyroscope.png" alt="Image" width="400">
   <p><b> Training and Validation Graph-1</b></p>
   <img src="training and validation graph1.png" alt="Image" width="400">
   <p><b>Training and Validation Graph-2</b></p>
