--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
  <iframe src="https://drive.google.com/file/d/1i-f6fTDjEEOFreswqP3cE6O1AbOdpN64/preview" width="640" height="480" allow="autoplay"></iframe>
   <iframe src="https://drive.google.com/file/d/1UXBTlobRjQp9qZQ4u3FOn4rpnGuBOaLt/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
+  <li onclick="showContent('week7')"><b>Week 7: Finite State Machine and Object Detection </b> </li>
+  <div id="week7" class="content-section">
+    <h3 id="pdisplay"><b>FSM And Object Detection</b></h3>
+    <p><b>Code file</b></p>
+     <a href= "carDetection.ino" target="_blank">Code file</a>
+    <p><b> Demo video</b></p>
+  <iframe src="https://drive.google.com/file/d/1FYDIVxYDQrMqAFToShSmeekEE5SMe3wq/preview" width="640" height="480" allow="autoplay"></iframe>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
