--- a/index.html
+++ b/index.html
@@ -295,6 +295,11 @@
     <p><b> Demo video</b></p>
   <iframe src="https://drive.google.com/file/d/1FYDIVxYDQrMqAFToShSmeekEE5SMe3wq/preview" width="640" height="480" allow="autoplay"></iframe>
   </div>
+  <div id="projectm2" class="content-section">
+    <h3 id="pdisplay"><b>Milestone-2</b></h3>
+    <p><b>Presentation</b></p>
+     <a href= "Embedded milestone-2.pptx" target="_blank">Presentation</a>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
