--- a/index.html
+++ b/index.html
@@ -301,6 +301,20 @@
     <p><b>Presentation Document</b></p>
      <a href= "Embedded milestone-2.pptx" target="_blank">Presentation</a>
   </div>
+  <div id="week8" class="content-section">
+      <h3 id="pdisplay"><b>Building a 4-Key Digital Piano using Sine Wave Output</b></h3>
+    <p><b>Code file</b></p>
+     <a href= "Digitalpiano.ino" target="_blank">Code file</a>
+       <p><b>Video of code</b></p>
+        <video controls width="500">
+        <source src="code running.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+       <p><b>Video of Demo</b></p>
+        <video controls width="500">
+        <source src="Demo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
   <script src="script.js"></script>
 </body>
 </html>
