--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
      <a href= "Embedded milestone-2.pptx" target="_blank">Presentation</a>
   </div>
   <div id="week8" class="content-section">
-      <h3 id="pdisplay"><b>Building a 4-Key Digital Piano using Sine Wave Output</b></h3>
+     <li onclick="showContent('week7')"><b>Week 7: Finite State Machine and Object Detection </b> </li>
+      <h3 id="pdisplay"><b>Building a 4-Key Digital Piano using Sine Wave Demo Output</b></h3>
     <p><b>Code file</b></p>
      <a href= "Digitalpiano.ino" target="_blank">Code file</a>
        <p><b>Video of code</b></p>
