--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
     <p><b>Presentation Document</b></p>
      <a href= "Embedded milestone-2.pptx" target="_blank">Presentation</a>
   </div>
+  <li onclick="showContent('week8')"><b>Week 8: Building a 4-Key Digital Piano using Sine Wave Output </b> </li>
   <div id="week8" class="content-section">
-     <li onclick="showContent('week7')"><b>Week 7: Finite State Machine and Object Detection </b> </li>
       <h3 id="pdisplay"><b>Building a 4-Key Digital Piano using Sine Wave Demo Output</b></h3>
     <p><b>Code file</b></p>
      <a href= "Digitalpiano.ino" target="_blank">Code file</a>
