--- a/index.html
+++ b/index.html
@@ -316,6 +316,21 @@
         <source src="Demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
          </video> 
+  </div>
+   <li onclick="showContent('week9')"><b>Week 9: PWM-Based Motor Speed Control </b> </li>
+  <div id="week9" class="content-section">
+      <h3 id="pdisplay"><b>PWM-Based Motor Speed Control</b></h3>
+    <p><b>Code file</b></p>
+     <a href= "Switch_PWM_Analog.ino" target="_blank">Code file</a>
+    <p><b> Circuit Diagram </b></p>
+  <img src="circuit diagram week9.png" alt="circuit Image" width="400">
+       <p><b>Video of code</b></p>
+        <video controls width="500">
+        <source src="demo week9.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+         </video> 
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
