--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     <p><b>Code file</b></p>
      <a href= "Switch_PWM_Analog.ino" target="_blank">Code file</a>
     <p><b> Circuit Diagram </b></p>
-  <img src="circuit diagram week9.png" alt="circuit Image" width="400">
+  <img src="circuit diagram week9.jpeg" alt="circuit Image" width="400">
        <p><b>Video of code</b></p>
         <video controls width="500">
         <source src="demo week9.mp4" type="video/mp4">
