--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
      <a href= "Switch_PWM_Analog.ino" target="_blank">Code file</a>
     <p><b> Circuit Diagram </b></p>
   <img src="circuit diagram week9.jpeg" alt="circuit Image" width="400">
-       <p><b>Video of code</b></p>
+       <p><b>Demo</b></p>
         <video controls width="500">
         <source src="demo week9.mp4" type="video/mp4">
         Your browser does not support the video tag.
