--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     
      <h3 id="pdisplay"><b>Part-2 (Task Scheduling)</b></h3>
     <p><b> part 2.1 Screenshot </b></p>
-     <img src="2-1.png" alt="Image" width="400">
+     <img src="2.png" alt="Image" width="400">
        <p><b>Demo</b></p>
        <iframe src="https://drive.google.com/file/d/1621gQX1hRB0CmvkWtUZQYCDcS5kQcPq7/preview" width="640" height="480" allow="autoplay"></iframe>
 
@@ -383,7 +383,7 @@
     <iframe src="https://drive.google.com/file/d/1j80zeaUyC_taolqRt67Du73aRnX_UsFR/preview" width="640" height="480" allow="autoplay"></iframe>
 
      <p><b> part 5.3 Screenshot </b></p>
-     <img src="5-3.png" alt="Image" width="400">
+     <img src="5-3.jpeg" alt="Image" width="400">
        <p><b>Demo</b></p>
      <iframe src="https://drive.google.com/file/d/1RHLtG94aGfGfc9UoJS_xnvVuUqDnxtBR/preview" width="640" height="480" allow="autoplay"></iframe>
 
