--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <iframe src="https://drive.google.com/file/d/1hIyn-4hAW8qCABRUpKjZLcueuRZ613Y6/preview" width="640" height="480" allow="autoplay"></iframe>
       
     <p><b> part 3.2 Screenshot </b></p>
-     <img src="3-2.png" alt="Image" width="400">
+     <img src="3-2.jpeg" alt="Image" width="400">
        <p><b>Demo</b></p>
 <iframe src="https://drive.google.com/file/d/1r0P5mjVYHTs6Leici4j596UmZAKz0wBa/preview" width="640" height="480" allow="autoplay"></iframe>
      <h3 id="pdisplay"><b>Part-4 (Queue)</b></h3>
